--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "dependencies": {
+    "axios": "^1.8.3",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.6.0",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "path": "^0.12.7"
   }
 }
